--- a/index.html
+++ b/index.html
@@ -44,46 +44,52 @@
 
           <hr />
 
-          <div class="row-fluid">
+          <div class="row-fluid pj-list">
 
             <div class="span4" id="pj1">
+              <a href="#">
               <h2>プロジェクト</h2>
               <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
-              <p><a class="btn" href="#">Github &raquo;</a></p>
+              </a>
             </div><!--/span-->
 
             <div class="span4" id="pj2">
+              <a href="#">
               <h2>プロジェクト</h2>
               <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
-              <p><a class="btn" href="#">Github &raquo;</a></p>
+              </a>
             </div><!--/span-->
 
             <div class="span4" id="pj3">
+              <a href="#">
               <h2>プロジェクト</h2>
               <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
-              <p><a class="btn" href="#">Github &raquo;</a></p>
+              </a>
             </div><!--/span-->
 
           </div><!--/row-->
 
-          <div class="row-fluid">
+          <div class="row-fluid pj-list">
 
             <div class="span4" id="pj4">
+              <a href="#">
               <h2>プロジェクト</h2>
               <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
-              <p><a class="btn" href="#">Github &raquo;</a></p>
+              </a>
             </div><!--/span-->
 
             <div class="span4" id="pj5">
+              <a href="#">
               <h2>プロジェクト</h2>
               <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
-              <p><a class="btn" href="#">Github &raquo;</a></p>
+              </a>
             </div><!--/span-->
 
             <div class="span4" id="pj6">
+              <a href="#">
               <h2>プロジェクト</h2>
               <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
-              <p><a class="btn" href="#">Github &raquo;</a></p>
+              </a>
             </div><!--/span-->
 
           </div><!--/row-->
