rollback auto create page

--- a/index.html
+++ b/index.html
@@ -1,46 +1,119 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Aimluck.github.com : aimluck on GitHub" />
+    <meta charset="utf-8">
+    <title>Bootstrap</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <!-- Le styles -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
 
-    <title>Aimluck.github.com</title>
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="img/favicon.png">
   </head>
 
-  <body>
+  <body style="padding-top:60px;" data-spy="scroll" data-target=".nav-tabs">
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/aimluck">View on GitHub</a>
-
-          <h1 id="project_title">Aimluck.github.com</h1>
-          <h2 id="project_tagline">aimluck on GitHub</h2>
-
-        </header>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="brand" href="/"><img src="img/logo.png" height="30" alt="aimluck"></a>
+        </div>
+      </div>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>aimluck.github.com</h1>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="hero-unit center" id="pj0">
+            <h1 class="center"><img src="http://www.aipo.com/img/version/logo_20120522-trans.png" alt="Aipo" /></h1>
+            <p>オープンソースグループウェア「アイポ」</p>
+            <p><a href="https://github.com/aimluck/aipo" class="btn btn-primary btn-large">Github</a> <a href="http://www.aipo.com/" class="btn btn-large" target="_blank">ご紹介</a></p>
+          </div>
 
-<p>The source code of <a href="http://aimluck.github.com/">http://aimluck.github.com/</a></p>
-      </section>
-    </div>
+          <hr />
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+          <div class="row-fluid pj-list">
 
-    
+            <div class="span4" id="pj1">
+              <a href="#">
+              <h2>プロジェクト</h2>
+              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              </a>
+            </div><!--/span-->
+
+            <div class="span4" id="pj2">
+              <a href="#">
+              <h2>プロジェクト</h2>
+              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              </a>
+            </div><!--/span-->
+
+            <div class="span4" id="pj3">
+              <a href="#">
+              <h2>プロジェクト</h2>
+              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              </a>
+            </div><!--/span-->
+
+          </div><!--/row-->
+
+          <div class="row-fluid pj-list">
+
+            <div class="span4" id="pj4">
+              <a href="#">
+              <h2>プロジェクト</h2>
+              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              </a>
+            </div><!--/span-->
+
+            <div class="span4" id="pj5">
+              <a href="#">
+              <h2>プロジェクト</h2>
+              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              </a>
+            </div><!--/span-->
+
+            <div class="span4" id="pj6">
+              <a href="#">
+              <h2>プロジェクト</h2>
+              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              </a>
+            </div><!--/span-->
+
+          </div><!--/row-->
+        </div><!--/span-->
+      </div><!--/row-->
+
+    </div><!--/.fluid-container-->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap-transition.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script src="js/bootstrap-typeahead.js"></script>
 
   </body>
 </html>
