--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
       <div class="row-fluid">
         <div class="span12">
           <div class="hero-unit center" id="pj0">
-            <h1 class="center"><img src="http://www.aipo.com/img/version/logo_20120522-trans.png" alt="Aipo" /></h1>
-            <p>オープンソースグループウェア「アイポ」</p>
-            <p><a href="https://github.com/aimluck/aipo" class="btn btn-primary btn-large">Github</a> <a href="http://www.aipo.com/" class="btn btn-large" target="_blank">ご紹介</a></p>
+            <h1 class="center">Aimluck Open Source</h1>
           </div>
 
           <hr />
@@ -47,9 +45,9 @@
           <div class="row-fluid pj-list">
 
             <div class="span4" id="pj1">
-              <a href="#">
-              <h2>プロジェクト</h2>
-              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              <a href="https://github.com/aimluck/aipo">
+              <h2>Aipo</h2>
+              <p>オープンソースグループウェア「アイポ」</p>
               </a>
             </div><!--/span-->
 
