--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
             </div><!--/span-->
 
             <div class="span4" id="pj2">
-              <a href="#">
-              <h2>プロジェクト</h2>
-              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              <a href="https://github.com/aimluck/cloudbeat">
+              <h2>CloudBeat</h2>
+              <p>AppEngineで動作するWeb監視システムです。Webページに接続できなくなったら自動的にメールを送信出来ます。</p>
               </a>
             </div><!--/span-->
 
             <div class="span4" id="pj3">
-              <a href="#">
-              <h2>プロジェクト</h2>
-              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              <a href="https://github.com/aimluck/mailcloud">
+              <h2>MailCloud</h2>
+              <p>AppEngineで動作するメール配信システムです。CSVで取り込んだメールアドレス宛てにメルマガを発行出来ます。</p>
               </a>
             </div><!--/span-->
 
@@ -70,24 +70,15 @@
           <div class="row-fluid pj-list">
 
             <div class="span4" id="pj4">
-              <a href="#">
-              <h2>プロジェクト</h2>
-              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
+              <a href="https://github.com/aimluck/ore-assist">
+              <h2>OreAssist</h2>
+              <p>AppEngineで動作する簡易HTTPサーバーです。メモ書き程度に書き留めたHTMLコードをそのままWeb上に公開出来ます。</p>
               </a>
             </div><!--/span-->
 
             <div class="span4" id="pj5">
-              <a href="#">
-              <h2>プロジェクト</h2>
-              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
-              </a>
-            </div><!--/span-->
-
-            <div class="span4" id="pj6">
-              <a href="#">
-              <h2>プロジェクト</h2>
-              <p>プロジェクト説明。プロジェクト説明。プロジェクト説明。プロジェクト説明。</p>
-              </a>
+              <h2>Next Project</h2>
+              <p>Comming soon...</p>
             </div><!--/span-->
 
           </div><!--/row-->
