--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
             </div><!--/span-->
 
             <div class="span4" id="pj5">
+              <span>
               <h2>Next Project</h2>
               <p>Comming soon...</p>
+              </span>
             </div><!--/span-->
 
           </div><!--/row-->
