--- a/index.html
+++ b/index.html
@@ -25,14 +25,6 @@
 
   <body style="padding-top:60px;" data-spy="scroll" data-target=".nav-tabs">
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="brand" href="/"><img src="img/logo.png" height="30" alt="aimluck"></a>
-        </div>
-      </div>
-    </div>
-
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
@@ -47,7 +39,7 @@
             <div class="span4" id="pj1">
               <a href="https://github.com/aimluck/aipo">
               <h2>Aipo</h2>
-              <p>オープンソースグループウェア「アイポ」</p>
+              <p>JAVAで構築したオープンソースグループウェアです。パソコン、携帯電話、スマートフォンなど幅広い端末に対応しています。</p>
               </a>
             </div><!--/span-->
 
