--- a/index.html
+++ b/index.html
@@ -2,55 +2,48 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>Aimluck Open Source</title>
+    <title>Aimluck Open Source Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- Le styles -->
+    <meta name="description" content="エイムラックのオープンソースソフトウェアを公開しております。">
+    <meta name="author" content="Aimluck,Inc">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="img/favicon.png">
+	<link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-precomposed.png">
   </head>
 
-  <body style="padding-top:60px;" data-spy="scroll" data-target=".nav-tabs">
+  <body>
+  	<div class="hero">
+    	<div class="inner">
+            <h1>Aimluck<br />Open Source Portal</h1>
+        </div>
+    </div>
 
     <div class="container-fluid">
+
       <div class="row-fluid">
-        <div class="span12">
-          <div class="hero-unit center" id="pj0">
-            <h1 class="center">Aimluck Open Source</h1>
-          </div>
+        <div class="span12 pj-list">
+          <div class="row-fluid">
 
-          <hr />
-
-          <div class="row-fluid pj-list">
-
-            <div class="span4" id="pj1">
+            <div class="span4 pj" id="pj1">
               <a href="https://github.com/aimluck/aipo">
               <h2>Aipo</h2>
               <p>JAVAで構築したオープンソースグループウェアです。パソコン、携帯電話、スマートフォンなど幅広い端末に対応しています。</p>
               </a>
             </div><!--/span-->
 
-            <div class="span4" id="pj2">
+            <div class="span4 pj" id="pj2">
               <a href="https://github.com/aimluck/cloudbeat">
               <h2>CloudBeat</h2>
               <p>AppEngineで動作するWeb監視システムです。Webページに接続できなくなったら自動的にメールを送信出来ます。</p>
               </a>
             </div><!--/span-->
 
-            <div class="span4" id="pj3">
+            <div class="span4 pj" id="pj3">
               <a href="https://github.com/aimluck/mailcloud">
               <h2>MailCloud</h2>
               <p>AppEngineで動作するメール配信システムです。CSVで取り込んだメールアドレス宛てにメルマガを発行出来ます。</p>
@@ -59,16 +52,16 @@
 
           </div><!--/row-->
 
-          <div class="row-fluid pj-list">
+          <div class="row-fluid">
 
-            <div class="span4" id="pj4">
+            <div class="span4 pj" id="pj4">
               <a href="https://github.com/aimluck/ore-assist">
               <h2>OreAssist</h2>
               <p>AppEngineで動作する簡易HTTPサーバーです。メモ書き程度に書き留めたHTMLコードをそのままWeb上に公開出来ます。</p>
               </a>
             </div><!--/span-->
 
-            <div class="span4" id="pj5">
+            <div class="span4 pj" id="pj5">
               <span>
               <h2>Next Project</h2>
               <p>Comming soon...</p>
@@ -76,6 +69,15 @@
             </div><!--/span-->
 
           </div><!--/row-->
+
+       </div><!--/span-->
+      </div><!--/row-->
+      
+      <hr />
+
+      <div class="row-fluid">
+        <div class="span12 footer">
+          Copyright © 2013 <a href="http://aimluck.com/" target="_blank">Aimluck,Inc.</a> All Rights Reserved.
         </div><!--/span-->
       </div><!--/row-->
 
