--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   	<div class="hero">
     	<div class="inner">
             <h1>Aimluck<br />Open Source Portal</h1>
+            <p>オープンソースソフトウェアを公開しています。</p>
+            <p>各プログラムのお問い合わせ、開発のご相談などお気軽にお問い合わせください。</p>
+            <p class="mt20"><a href="http://aimluck.com/inquiry/" class="btn btn-primary btn-large">お問い合わせ</a></p>
         </div>
     </div>
 
