--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Aimluck,Inc">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
     <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
 
     <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
