--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Aimluck Open Source</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="エイムラックのオープンソースソフトウェアを公開しております。">
+    <meta name="description" content="無料で使えるオープンソースを公開しています。">
     <meta name="author" content="Aimluck,Inc">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
