--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
        </div><!--/span-->
       </div><!--/row-->
       
-      <hr />
-
-      <div class="row-fluid">
-        <div class="span12 footer">
-          Copyright © 2013 <a href="http://aimluck.com/" target="_blank">Aimluck,Inc.</a> All Rights Reserved.
-        </div><!--/span-->
-      </div><!--/row-->
-
     </div><!--/.fluid-container-->
+
+    <footer class="footer">
+    	<div class="container-fluid">
+    	<div class="row-fluid">
+          Copyright © 2013 <a href="http://aimluck.com/" target="_blank">Aimluck,Inc.</a> All Rights Reserved.
+      	</div>
+        </div>
+    </footer><!--/footer-->
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap-transition.js"></script>
