--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
   	<div class="hero">
     	<div class="inner">
-            <h1><span>Aimluck</span><br />Open Source</h1>
+            <h1><small>Aimluck</small><br />Open Source</h1>
             <p>無料で使えるオープンソースを公開しています。</p>
             <p>各プログラムのお問い合わせ、開発のご相談などお気軽にお問い合わせください。</p>
             <p class="mt20"><a href="http://aimluck.com/inquiry/" class="btn btn-warning btn-large">お問い合わせ</a></p>
@@ -35,13 +35,15 @@
 
             <div class="span4 pj" id="pj1">
               <a href="https://github.com/aimluck/aipo">
+              <div class="metaphor"><img src="img/metaphor_aipo.png" width="128" height="128" /></div>
               <h2>Aipo</h2>
-              <p>JAVAで構築したオープンソースグループウェアです。パソコン、携帯電話、スマートフォンなど幅広い端末に対応しています。</p>
+              <p>Javaで構築したオープンソースグループウェアです。パソコン、携帯電話、スマートフォンなど幅広い端末に対応しています。</p>
               </a>
             </div><!--/span-->
 
             <div class="span4 pj" id="pj2">
               <a href="https://github.com/aimluck/cloudbeat">
+              <div class="metaphor"><img src="img/metaphor_cloudbeat.png" width="128" height="128" /></div>
               <h2>CloudBeat</h2>
               <p>AppEngineで動作するWeb監視システムです。Webページに接続できなくなったら自動的にメールを送信出来ます。</p>
               </a>
@@ -49,6 +51,7 @@
 
             <div class="span4 pj" id="pj3">
               <a href="https://github.com/aimluck/mailcloud">
+              <div class="metaphor"><img src="img/metaphor_mailcloud.png" width="128" height="128" /></div>
               <h2>MailCloud</h2>
               <p>AppEngineで動作するメール配信システムです。CSVで取り込んだメールアドレス宛てにメルマガを発行出来ます。</p>
               </a>
@@ -60,6 +63,7 @@
 
             <div class="span4 pj" id="pj4">
               <a href="https://github.com/aimluck/ore-assist">
+              <div class="metaphor"><img src="img/metaphor_oreassist.png" width="128" height="128" /></div>
               <h2>OreAssist</h2>
               <p>AppEngineで動作する簡易HTTPサーバーです。メモ書き程度に書き留めたHTMLコードをそのままWeb上に公開出来ます。</p>
               </a>
@@ -67,6 +71,7 @@
 
             <div class="span4 pj" id="pj4">
               <a href="https://github.com/aimluck/admin-themes">
+              <div class="metaphor"><img src="img/metaphor_adminthemes.png" width="128" height="128" /></div>
               <h2>AdminThemes</h2>
               <p>Bootstrapベースで構築された管理画面用のHTML/CSSテンプレートです。機能的な管理画面フォーマットとしてすぐ利用出来ます。</p>
               </a>
@@ -74,6 +79,7 @@
 
             <div class="span4 pj" id="pj5">
               <span>
+              <div class="metaphor"><img src="img/metaphor_nextproject.png" width="128" height="128" /></div>
               <h2>Next Project</h2>
               <p>Comming soon...</p>
               </span>
