--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h1><small>Aimluck</small><br />Open Source</h1>
             <p>無料で使えるオープンソースを公開しています。</p>
             <p>各プログラムのお問い合わせ、開発のご相談などお気軽にお問い合わせください。</p>
+            <p class="mt20"><a href="http://aimluck.com/inquiry/" class="btn btn-aimluck btn-large">お問い合わせ</a></p>
             <p class="mt20"><a href="http://aimluck.com/inquiry/" class="btn btn-warning btn-large">お問い合わせ</a></p>
         </div>
     </div>
