--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
   <body>
   	<div class="hero">
-    	<div class="sun">
+    	<!--div class="sun">
             <img src="img/sun.png" width="1500" height="1500" />
-        </div>
+        </div-->
     	<div class="inner">
           <h1><small>Aimluck</small><br />Open Source</h1>
             <p>無料で使えるオープンソースを公開しています。</p>
             <p>各プログラムのお問い合わせ、開発のご相談などお気軽にお問い合わせください。</p>
-            <p class="mt20"><a href="http://aimluck.com/inquiry/" class="btn btn-warning btn-large">お問い合わせ</a></p>
+            <p class="mt20"><a href="http://aimluck.com/inquiry/" class="btn btn-primary btn-large">お問い合わせ</a></p>
         </div>
   </div>
 
